fix orders jumpiness: account-container grid-template-columns

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -922,6 +922,7 @@ button.reset:hover:not(:has(> *)) {
 .account-container {
   display: grid;
   grid-template-columns: subgrid;
+  grid-template-rows: min-content;
   background: white;
   grid-column: 1/5;
   min-height: 100vh;
